      content.  Link checking also works for Link objects.

    - (__future__) Added "composite content" types (see the "dogbowl
      proposal",
      (http://cmf.zope.org/rqmts/proposals/compounds/compoundproposal.txt).

    - (__future__) Added DCWorkflow (through-the-web configurable
      workflows) to the core set of CMF products.

    - Cleaned up Interfaces and API Help (Collector #96):

      o  Removed redundant 'Syndicatable' and 'IndexableContent' interfaces.

      o  Removed unfixable 'Membership' and 'ReviewableContent' interfaces.

      o  Removed listActions() from 'Contentish' and 'portal_workflow'
         interface.

      o  Removed redundant or 'None' overriding of listActions().

      o  Updated all interfaces to work with new Zope 2.6 Interface API.

      o  Added 'portal_properties' and 'Dynamic' interfaces.

      o  Added many interface implementation tests and made them pass.

    - Removed deprecated 'register' module and 'PortalContentRegistration'
      interface.

    - Moved URLTool to CMFCore. Added interface and basic tests.
      (Collector #67)

    - Added FSFile skin object, in order to allow .swf files (et al.) in 
      skins

    - Added 'listMetaTags' skin method, which filters the DublinCore
      metadata into a form suitable for inclusion as <meta> tags.

  Bug Fixes

    - Fixed some minor buglets. (Collector #80, #94 and #95)

    - Ensure that a couple of calls to string.split only split into a 
      maximum of two parts. 
      (Collector #82)

    - Enabled the CMF to be installed in a PRODUCTS_PATH.
      In doing so, also made it easier to move CMF sites between 
      Windows and Unix.
      (Collector #64)

    - Multimodule checkin to convert calls from user.getUserName() to
      user.getId() where appropriate.  User names should not be used
      as immutable references, while user ids should.  The distinction
      is not clearly enforcd in the stock user folder or any current user